Challenge10/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: aloussaief
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: "0.1"
            memory: "300Mi"
          limits:
            cpu: "0.2"
            memory: "400Mi"
        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: aloussaief
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017       
    targetPort: 27017  
  type: ClusterIP
