Challenge10/webdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdb
  namespace: aloussaief
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webdb
  template:
    metadata:
      labels:
        app: webdb
    spec:
      containers:
      - name: webdb
        image: achrefloussaief101/webdb:v3
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "0.1"
            memory: "100Mi"
          limits:
            cpu: "0.2"
            memory: "200Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: webdb-service
  namespace: aloussaief
spec:
  selector:
    app: webdb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
